--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,12 @@
 [tool.poetry]
 name = "django-from-excel"
-version = "0.1.0"
+version = "0.1.1"
 description = "Automatically builds Django models from an Excel file"
-authors = ["John Macy <36553266+johncmacy@users.noreply.github.com>"]
+readme = 'README.md'
+authors = ["John Macy <johncmacy@gmail.com>"]
+repository = 'https://github.com/johncmacy/django-from-excel'
 license = "MIT"
+keywords = ['excel', 'convert', 'spreadsheet', 'django', 'model']
 
 [tool.poetry.dependencies]
 python = "^3.9"
