--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pandas = "^1.3.3"
 openpyxl = "^3.0.8"
 
 [tool.poetry.dev-dependencies]
+ipykernel = "^6.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
